--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,7 @@
 ---
+title: "DisVar: An R library for identifying variants associated with diseases using personal genetic information"
+author: "Khunanon Chanasongkhram"
+date: "11/01/2023"
 output: github_document
 ---
 
@@ -13,44 +16,34 @@ knitr::opts_chunk$set(
 )
 ```
 
-# DisVar
+# DisVar: An R library for identifying variants associated with diseases using personal genetic information
 
 <!-- badges: start -->
 <!-- badges: end -->
+DisVar is an R package that finds diseases from a VCF file by comparing the variants in the VCF file with those in various databases. The package currently supports five databases: GWASdb, GRASP, GWAS Catalog, GAD, and, Johnson and O'Donnell.
 
-The goal of DisVar is to identify disease-associated variants.
 
 ## Installation
 
-You can install the development version of DisVar from [GitHub](https://github.com/) with:
+You can install the development version of DisVar from [GitHub](https://github.com/) to install the package, you can use the `devtools` package and run the following command:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("Khunanon-Chanasongkhram/DisVar")
 ```
+## Usage
 
-## Example
+The main function in the package is 'DisVar()', which takes two arguments:
 
-This is a basic example which shows you how to solve a common problem:
+• 'file': the name of the VCF file.
+• 'skip': the number of lines to skip at the beginning of the VCF file. (default: 0)
+The function returns a data frame containing variant information from various databases.
 
+Here's an example of how to use the function:
 
 ```{r example}
 library(DisVar)
 DisVar("file_name.vcf", skip = 28)
 ```
+The package also depends on two external packages 'sqldf' and 'data.table', they need to be installed before using the package.
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
