--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
 author: "Khunanon Chanasongkhram"
-date: "11/01/2023"
+date: "24/01/2023"
 output: github_document
 ---
 
@@ -40,6 +40,8 @@ The main function in the package is `DisVar()`, which takes two arguments:
 
 The function returns a data frame containing variant information from various databases.
 
+### Examples
+
 Here's an example of how to use the function:
 
 ```{r example}
@@ -47,6 +49,20 @@ library(DisVar)
 DisVar("file_name.vcf", skip = 28)
 ```
 The package also depends on two external packages `sqldf` and `data.table`, they need to be installed before using the package.
+
+when you run this you will get this output file: `file_name.vcf_diseases_output.txt`
+
+
+| Disease                                                    | Chr | Position | Variant_id | Allele sample | Allele DB | Confident/P-value | DB           |
+|------------------------------------------------------------|-----|----------|------------|---------------|-----------|-------------------|--------------|
+| Breast cancer                                              |   3 |  4700592 | rs6762644  | A>G           | A>G       |          2.00E-12 | GWASdb       |
+|                                                            |   3 |  4700592 | rs6762644  | A>G           | NA        |          2.20E-12 | GRASP        |
+| Breast cancer (Estrogen receptor positive   breast cancer) |   3 |  4700592 | rs6762644  | A>G           | NA        |          1.40E-08 | GRASP        |
+| Breast cancer   (invasive breast cancer)                   |   3 |  4700592 | rs6762644  | A>G           | NA        |          1.20E-09 | GRASP        |
+|                                                            |   3 |  4700592 | rs6762644  | A>G           | NA        |          2.00E-12 | GWAS Catalog |
+|                                                            |   3 |  4700592 | rs6762644  | A>G           | NA        |          4.00E-18 | GWAS Catalog |
+| Breast_cancer                                              |   3 |  4700592 | rs6762644  | A>G           | NA        |          9.00E-12 | GWAS Catalog |
+
 
 ## Additional Resources
 
