--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
 author: "Khunanon Chanasongkhram"
-date: "04/04/2023"
+date: "07/07/2023"
 output: github_document
 ---
 
@@ -30,7 +30,7 @@ DisVar is an R package that finds diseases from a VCF file by comparing the vari
 ## Installation
 
 ## Installing the Package in R Studio
-You can install the development version of DisVar from [GitHub](https://github.com/) to install the package, you can use the `devtools` package and run the following command:
+You can install the development version of DisVar from [GitHub](https://github.com/). To install the package, you can use the `devtools` package and run the following command:
 
 ``` r
 # install.packages("devtools")
@@ -38,14 +38,17 @@ devtools::install_github("Khunanon-Chanasongkhram/DisVar")
 ```
 
 ## Installing the Package on Linux servers
+
 ### Step 1: Installing Minoconda 3
+
 To install Miniconda via the terminal, you can follow these steps:
 1.Create a directory to install Miniconda into:
+
 ``` 
 mkdir -p ~/miniconda3
 ```
 
-2.Download the latest Python 3 based install script for Linux 64 bit:
+2.Download the latest Miniconda3 based install script for Linux 64 bit:
 ``` 
 wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O ~/miniconda3/miniconda.sh
 ```
@@ -56,6 +59,7 @@ bash ~/miniconda3/miniconda.sh -b -u -p ~/miniconda3
 ```
 
 After then, you can restart your shell, and conda will be ready for use.
+
 For further details regarding conda installation please see [Miniconda linux installers](https://docs.conda.io/en/latest/miniconda.html#linux-installers)
 
 ### Step 2: Installing R using conda
@@ -71,7 +75,7 @@ Now you can activate the new environment by running:
 conda activate r-environment
 ```
 
-and deactivate an active environment by running:
+If you want to and deactivate an active environment just running:
 
 ```
 conda deactivate
@@ -101,7 +105,7 @@ The main function in the package is `DisVar()`, which takes one arguments:
 
 - `file`: the name of the VCF file.
 
-The function returns a data frame containing variant information from various databases.
+The function returns a data frame containing variants associated with diseases compared from various databases.
 
 ### Examples
 
@@ -116,20 +120,15 @@ You will get this output file: `file_name`_diseases_output.txt
 
 When you test the program with the test file (`file_name.vcf`), the results are shown in the following table.
 
-```{r example}
-library(knitr)
-kable(head(aligned_df))
-```
-
-| Disease                                                    | Chr | Position | Variant_id | Allele sample | Allele DB | Confident/P-value | DB           |
-|------------------------------------------------------------|-----|----------|------------|---------------|-----------|-------------------|--------------|
-| Breast cancer                                              |   3 |  4700592 | rs6762644  | A>G           | A>G       |          2.00E-12 | GWASdb       |
-|                                                            |   3 |  4700592 | rs6762644  | A>G           | NA        |          2.20E-12 | GRASP        |
-| Breast cancer (Estrogen receptor positive   breast cancer) |   3 |  4700592 | rs6762644  | A>G           | NA        |          1.40E-08 | GRASP        |
-| Breast cancer   (invasive breast cancer)                   |   3 |  4700592 | rs6762644  | A>G           | NA        |          1.20E-09 | GRASP        |
-|                                                            |   3 |  4700592 | rs6762644  | A>G           | NA        |          2.00E-12 | GWAS Catalog |
-|                                                            |   3 |  4700592 | rs6762644  | A>G           | NA        |          4.00E-18 | GWAS Catalog |
-| Breast_cancer                                              |   3 |  4700592 | rs6762644  | A>G           | NA        |          9.00E-12 | GWAS Catalog |
+|Disease                                                 |Chr|Position|Gene      |Variant_id|Variant_type|Confident/P-value|Allele DB|Confident|DB          |
+|--------------------------------------------------------|---|--------|----------|----------|------------|-----------------|---------|---------|------------|
+|Breast cancer                                           |3  |4700592 |ITPR1     |rs6762644 |intron      |A>G              |A>G      |2e-12    |GWASdb      |
+|                                                        |3  |4700592 |NA        |rs6762644 |NA          |A>G              |NA       |2.2e-12  |GRASP       |
+|Breast cancer (Estrogen receptor positive breast cancer)|3  |4700592 |NA        |rs6762644 |NA          |A>G              |NA       |1.4e-08  |GRASP       |
+|Breast cancer (invasive breast cancer)                  |3  |4700592 |NA        |rs6762644 |NA          |A>G              |NA       |1.2e-09  |GRASP       |
+|Breast_cancer                                           |3  |4700592 |EGOT/ITPR1|rs6762644 |intron      |A>G              |NA       |4e-18    |GWAS Catalog|
+|                                                        |3  |4700592 |ITPR1,EGOT|rs6762644 |intron      |A>G              |NA       |2e-12    |GWAS Catalog|
+|                                                        |3  |4700592 |NR        |rs6762644 |intron      |A>G              |NA       |9e-12    |GWAS Catalog|
 
 
 ## Additional Resources
