--- a/README.Rmd
+++ b/README.Rmd
@@ -117,7 +117,7 @@ library(DisVar)
 DisVar("file_name.vcf")
 ```
 
-You will get this output file: `file_name`_diseases_output.txt
+You will get this output file: `file_name`_DisVar.txt
 
 When you test the program with the test file (`file_name.vcf`), the results are shown in the following table.
 
