Update package DisVar1.1.4 +fix all warning

--- a/README.Rmd
+++ b/README.Rmd
@@ -96,9 +96,11 @@ Now the DisVar is ready to use!
 ## Dependencies
 The package depends on the following packages:
 
-- `sqldf`
 - `data.table`
 - `dplyr`
+- `sqldf`
+- `stats`
+- `utils`
 
 ## Usage
 
