--- a/README.Rmd
+++ b/README.Rmd
@@ -147,4 +147,4 @@ When you test the program with the test file (`file_name.vcf`), the results are 
 
 - The VCF format is a standard file format for storing genetic variation data, and it is widely used in bioinformatics research. More information on the VCF format can be found at the [VCF specification page](http://samtools.github.io/hts-specs/VCFv4.3.pdf)
 
-[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/DisVar)](https://cran.r-project.org/package=DisVar)
+[![DOI](https://zenodo.org/badge/587268783.svg)](https://zenodo.org/badge/latestdoi/587268783)
