--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
 author: "Khunanon Chanasongkhram"
-date: "22/04/2023"
+date: "24/06/2024"
 output: github_document
 ---
 
@@ -142,6 +142,17 @@ When you test the program with the test file (`file_name.vcf`), the results are 
 |                                                            | 10    | 1.22E+08 | FGFR2   | rs2981579  | intron_variant   | A>G           | NA        | 4.00E-31  | GWAS Catalog | 1491780 | PASS   | AC=3227;AF=0.503904;AN=6404;BaseQRankSum=0.098;ClippingRankSum=-0.024;DP=95506;FS=0;InbreedingCoeff=0.0499;MLEAC=3227;MLEAF=0.504;MQ=60;MQ0=0;MQRankSum=0.027;POSITIVE_TRAIN_SITE;QD=21.12;ReadPosRankSum=0.349;SOR=0.676;VQSLOD=22.69;culprit=MQ;AN_EUR=1266;AN_EAS=1170;AN_AMR=980;AN_SAS=1202;AN_AFR=1786;AF_EUR=0.550553;AF_EAS=0.549573;AF_AMR=0.568367;AF_SAS=0.610649;AF_AFR=0.333707;AC_EUR=697;AC_EAS=643;AC_AMR=557;AC_SAS=734;AC_AFR=596;AC_Het_EUR=293;AC_Het_EAS=283;AC_Het_AMR=249;AC_Het_SAS=296;AC_Het_AFR=400;AC_Het=1521;AC_Hom_EUR=404;AC_Hom_EAS=360;AC_Hom_AMR=308;AC_Hom_SAS=438;AC_Hom_AFR=196;AC_Hom=1706;HWE_EUR=0.108258;ExcHet_EUR=0.95804;HWE_EAS=0.616227;ExcHet_EAS=0.744677;HWE_AMR=0.462052;ExcHet_AMR=0.249731;HWE_SAS=0.439899;ExcHet_SAS=0.220669;HWE_AFR=0.880403;ExcHet_AFR=0.45117;HWE=0.00469594;ExcHet=0.997943;ME=0;AN_EUR_unrel=1006;AN_EAS_unrel=1008;AN_AMR_unrel=694;AN_SAS_unrel=978;AN_AFR_unrel=1322;AF_EUR_unrel=0.548708;AF_EAS_unrel=0.550595;AF_AMR_unrel=0.573487;AF_SAS_unrel=0.611452;AF_AFR_unrel=0.33888;AC_EUR_unrel=552;AC_EAS_unrel=555;AC_AMR_unrel=398;AC_SAS_unrel=598;AC_AFR_unrel=448;AC_Het_EUR_unrel=228;AC_Het_EAS_unrel=251;AC_Het_AMR_unrel=176;AC_Het_SAS_unrel=234;AC_Het_AFR_unrel=296;AC_Hom_EUR_unrel=324;AC_Hom_EAS_unrel=304;AC_Hom_AMR_unrel=222;AC_Hom_SAS_unrel=364;AC_Hom_AFR_unrel=152;ANN=G\|intron_variant\|MODIFIER\|FGFR2\|ENSG00000066468\|transcript\|ENST00000457416.6\|protein_coding\|2/17\|c.110-12117T>C\|\|\|\|\|\|;1000Gp3_RA_GF=0.473243;1000Gp3_RR_GF=0.253994;1000Gp3_HomC=636,683;1000Gp3_AA_GF=0.272764;1000Gp3_AF=0.509385;AR_GENE=FGFR2;Entrez_gene_id=2263;RVIS=-1.50462206;RVIS_percentile=3.568058504;GDI=593.43974;GDI-Phred=4.93642;LoFtool_score=1.79E-03;Essential_gene=E;MGI_mouse_gene=Fgfr2;ZFIN_zebrafish_gene=fgfr2;ZFIN_zebrafish_phenotype_tag=abnormal;dbSNPBuildID=101                                                                                                                                                                  |
 |                                                            | 10    | 1.22E+08 |         | rs2981579  | intron_variant   | A>G           | NA        | 3.00E-11  | GWAS Catalog | 1491780 | PASS   | AC=3227;AF=0.503904;AN=6404;BaseQRankSum=0.098;ClippingRankSum=-0.024;DP=95506;FS=0;InbreedingCoeff=0.0499;MLEAC=3227;MLEAF=0.504;MQ=60;MQ0=0;MQRankSum=0.027;POSITIVE_TRAIN_SITE;QD=21.12;ReadPosRankSum=0.349;SOR=0.676;VQSLOD=22.69;culprit=MQ;AN_EUR=1266;AN_EAS=1170;AN_AMR=980;AN_SAS=1202;AN_AFR=1786;AF_EUR=0.550553;AF_EAS=0.549573;AF_AMR=0.568367;AF_SAS=0.610649;AF_AFR=0.333707;AC_EUR=697;AC_EAS=643;AC_AMR=557;AC_SAS=734;AC_AFR=596;AC_Het_EUR=293;AC_Het_EAS=283;AC_Het_AMR=249;AC_Het_SAS=296;AC_Het_AFR=400;AC_Het=1521;AC_Hom_EUR=404;AC_Hom_EAS=360;AC_Hom_AMR=308;AC_Hom_SAS=438;AC_Hom_AFR=196;AC_Hom=1706;HWE_EUR=0.108258;ExcHet_EUR=0.95804;HWE_EAS=0.616227;ExcHet_EAS=0.744677;HWE_AMR=0.462052;ExcHet_AMR=0.249731;HWE_SAS=0.439899;ExcHet_SAS=0.220669;HWE_AFR=0.880403;ExcHet_AFR=0.45117;HWE=0.00469594;ExcHet=0.997943;ME=0;AN_EUR_unrel=1006;AN_EAS_unrel=1008;AN_AMR_unrel=694;AN_SAS_unrel=978;AN_AFR_unrel=1322;AF_EUR_unrel=0.548708;AF_EAS_unrel=0.550595;AF_AMR_unrel=0.573487;AF_SAS_unrel=0.611452;AF_AFR_unrel=0.33888;AC_EUR_unrel=552;AC_EAS_unrel=555;AC_AMR_unrel=398;AC_SAS_unrel=598;AC_AFR_unrel=448;AC_Het_EUR_unrel=228;AC_Het_EAS_unrel=251;AC_Het_AMR_unrel=176;AC_Het_SAS_unrel=234;AC_Het_AFR_unrel=296;AC_Hom_EUR_unrel=324;AC_Hom_EAS_unrel=304;AC_Hom_AMR_unrel=222;AC_Hom_SAS_unrel=364;AC_Hom_AFR_unrel=152;ANN=G\|intron_variant\|MODIFIER\|FGFR2\|ENSG00000066468\|transcript\|ENST00000457416.6\|protein_coding\|2/17\|c.110-12117T>C\|\|\|\|\|\|;1000Gp3_RA_GF=0.473243;1000Gp3_RR_GF=0.253994;1000Gp3_HomC=636,683;1000Gp3_AA_GF=0.272764;1000Gp3_AF=0.509385;AR_GENE=FGFR2;Entrez_gene_id=2263;RVIS=-1.50462206;RVIS_percentile=3.568058504;GDI=593.43974;GDI-Phred=4.93642;LoFtool_score=1.79E-03;Essential_gene=E;MGI_mouse_gene=Fgfr2;ZFIN_zebrafish_gene=fgfr2;ZFIN_zebrafish_phenotype_tag=abnormal;dbSNPBuildID=101                                                                                                                                                                  |
 |                                                            | 10    | 1.22E+08 | FGFR2   | rs2981579  | intron_variant   | A>G           | NA        | 2.00E-10  | GWAS Catalog | 1491780 | PASS   | AC=3227;AF=0.503904;AN=6404;BaseQRankSum=0.098;ClippingRankSum=-0.024;DP=95506;FS=0;InbreedingCoeff=0.0499;MLEAC=3227;MLEAF=0.504;MQ=60;MQ0=0;MQRankSum=0.027;POSITIVE_TRAIN_SITE;QD=21.12;ReadPosRankSum=0.349;SOR=0.676;VQSLOD=22.69;culprit=MQ;AN_EUR=1266;AN_EAS=1170;AN_AMR=980;AN_SAS=1202;AN_AFR=1786;AF_EUR=0.550553;AF_EAS=0.549573;AF_AMR=0.568367;AF_SAS=0.610649;AF_AFR=0.333707;AC_EUR=697;AC_EAS=643;AC_AMR=557;AC_SAS=734;AC_AFR=596;AC_Het_EUR=293;AC_Het_EAS=283;AC_Het_AMR=249;AC_Het_SAS=296;AC_Het_AFR=400;AC_Het=1521;AC_Hom_EUR=404;AC_Hom_EAS=360;AC_Hom_AMR=308;AC_Hom_SAS=438;AC_Hom_AFR=196;AC_Hom=1706;HWE_EUR=0.108258;ExcHet_EUR=0.95804;HWE_EAS=0.616227;ExcHet_EAS=0.744677;HWE_AMR=0.462052;ExcHet_AMR=0.249731;HWE_SAS=0.439899;ExcHet_SAS=0.220669;HWE_AFR=0.880403;ExcHet_AFR=0.45117;HWE=0.00469594;ExcHet=0.997943;ME=0;AN_EUR_unrel=1006;AN_EAS_unrel=1008;AN_AMR_unrel=694;AN_SAS_unrel=978;AN_AFR_unrel=1322;AF_EUR_unrel=0.548708;AF_EAS_unrel=0.550595;AF_AMR_unrel=0.573487;AF_SAS_unrel=0.611452;AF_AFR_unrel=0.33888;AC_EUR_unrel=552;AC_EAS_unrel=555;AC_AMR_unrel=398;AC_SAS_unrel=598;AC_AFR_unrel=448;AC_Het_EUR_unrel=228;AC_Het_EAS_unrel=251;AC_Het_AMR_unrel=176;AC_Het_SAS_unrel=234;AC_Het_AFR_unrel=296;AC_Hom_EUR_unrel=324;AC_Hom_EAS_unrel=304;AC_Hom_AMR_unrel=222;AC_Hom_SAS_unrel=364;AC_Hom_AFR_unrel=152;ANN=G\|intron_variant\|MODIFIER\|FGFR2\|ENSG00000066468\|transcript\|ENST00000457416.6\|protein_coding\|2/17\|c.110-12117T>C\|\|\|\|\|\|;1000Gp3_RA_GF=0.473243;1000Gp3_RR_GF=0.253994;1000Gp3_HomC=636,683;1000Gp3_AA_GF=0.272764;1000Gp3_AF=0.509385;AR_GENE=FGFR2;Entrez_gene_id=2263;RVIS=-1.50462206;RVIS_percentile=3.568058504;GDI=593.43974;GDI-Phred=4.93642;LoFtool_score=1.79E-03;Essential_gene=E;MGI_mouse_gene=Fgfr2;ZFIN_zebrafish_gene=fgfr2;ZFIN_zebrafish_phenotype_tag=abnormal;dbSNPBuildID=101                                                                                                                                                                  |
+## Publication
+
+This project has been published in the [PeerJ](https://peerj.com) journal.
+
+You can access the full publication here:
+
+[DisVar: an R library for identifying variants associated with diseases using large-scale personal genetic information](https://peerj.com/articles/16086)
+
+[![DOI](https://img.shields.io/badge/DOI-10.7717/peerj.16086-blue)](https://doi.org/10.7717/peerj.16086)
+
+Published: 28 September 2023
 
 ## Additional Resources
 
